force-app/main/default/objects/Referral_Customer_Need_Mapping__mdt/Referral_Customer_Need_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Referral Customer Need Mapping</label>
    <pluralLabel>Referral Customer Need Mappings</pluralLabel>
</CustomObject>