force-app/main/default/objects/Referral_Customer_Need_Mapping__mdt/fields/Customer_Need__c.field-meta.xml
<CustomField>
    <fullName>Customer_Need__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Customer needs</description>
    <label>Customer Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term Loan</fullName>
                <default>true</default>
                <label>Term Loan</label>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Asset Finance</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Trade Finance</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange</fullName>
            </value>
            <value>
                <fullName>Wealth</fullName>
            </value>
            <value>
                <fullName>Indemnity Guarantee</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Home Loan - Bridging Finance</fullName>
            </value>
            <value>
                <fullName>Home Loan - Construction</fullName>
            </value>
            <value>
                <fullName>Home Loan - Refinance + Purchase</fullName>
            </value>
            <value>
                <fullName>Home Loan - Purchase</fullName>
            </value>
            <value>
                <fullName>Home Loan - Refinance</fullName>
            </value>
            <value>
                <fullName>Home Loan - Maintenance</fullName>
            </value>
            <value>
                <fullName>Home Loan - Increase</fullName>
            </value>
            <value>
                <fullName>Home Loan - Other</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Other Loans</fullName>
            </value>
            <value>
                <fullName>Purchasing Property</fullName>
            </value>
            <value>
                <fullName>Purchasing Vacant Land</fullName>
            </value>
            <value>
                <fullName>Purchasing an existing Business</fullName>
            </value>
            <value>
                <fullName>Purchasing a new Business</fullName>
            </value>
            <value>
                <fullName>Purchasing equipment (inc. vehicles and fit out)</fullName>
            </value>
            <value>
                <fullName>Set up a new Business (Start Up)</fullName>
            </value>
            <value>
                <fullName>Assist with Business Working Capital/Temporary Finance</fullName>
            </value>
            <value>
                <fullName>Refinance from Other Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Construction and Renovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>