force-app/main/default/objects/Referral_Customer_Need_Mapping__mdt/fields/Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Record Type</description>
    <label>Lead Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial CRM Lead</fullName>
                <default>true</default>
                <label>Commercial CRM Lead</label>
            </value>
            <value>
                <fullName>ANZX Leads</fullName>
            </value>
            <value>
                <fullName>Business Referral</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Mobile Lending Lead</fullName>
            </value>
            <value>
                <fullName>Person Referral</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Retirement Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>