force-app/main/default/objects/Referral_Customer_Need_Mapping__mdt/fields/Referral_Customer_Needs__c.field-meta.xml
<CustomField>
    <fullName>Referral_Customer_Needs__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Referral Customer Needs</description>
    <label>Referral Customer Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Insurance</fullName>
                <default>true</default>
                <label>Asset Insurance</label>
            </value>
            <value>
                <fullName>Borrow Need</fullName>
            </value>
            <value>
                <fullName>Borrow to Refinance Need</fullName>
            </value>
            <value>
                <fullName>Borrow Using Equity</fullName>
            </value>
            <value>
                <fullName>Business Expansion</fullName>
            </value>
            <value>
                <fullName>Business Need</fullName>
            </value>
            <value>
                <fullName>Business Select Package</fullName>
            </value>
            <value>
                <fullName>Cashflow Management</fullName>
            </value>
            <value>
                <fullName>Credit Card Insurance</fullName>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Everyday Banking</fullName>
            </value>
            <value>
                <fullName>Financial Planning Need</fullName>
            </value>
            <value>
                <fullName>Getting Married</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Land Purchase/Construction</fullName>
            </value>
            <value>
                <fullName>Loan Insurance</fullName>
            </value>
            <value>
                <fullName>Managing Cash Flow</fullName>
            </value>
            <value>
                <fullName>Managing your Finances</fullName>
            </value>
            <value>
                <fullName>Moving to a new home</fullName>
            </value>
            <value>
                <fullName>Moving to Australia</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planning for Future/Retirement</fullName>
            </value>
            <value>
                <fullName>Protecting Life/Income</fullName>
            </value>
            <value>
                <fullName>Protecting your Assets</fullName>
            </value>
            <value>
                <fullName>Purchase Commercial Property</fullName>
            </value>
            <value>
                <fullName>Purchasing Household Goods</fullName>
            </value>
            <value>
                <fullName>Refinance From another OFI</fullName>
            </value>
            <value>
                <fullName>Refinance OFI Loan</fullName>
            </value>
            <value>
                <fullName>Renovating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>